--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -113,7 +113,6 @@ th,
 td,
 article,
 aside,
-canvas,
 details,
 embed,
 figure,
@@ -1601,6 +1600,17 @@ body.landing {
     padding: 0;
   }
   
+  #canvasDiv {
+    width: 100%;
+    height: 100%;
+    display: absolute;
+    position: absolute;
+    align-content: center;
+    top: 10em;
+    left: 0%;
+    //z-index: -9999;
+  }
+
   p {
     font-size: 1.25em;
     margin-top: 0.75em;
