--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,9 +8,11 @@
       {{- partial "header.html" . -}}
 
       <!-- Banner -->
+
       <section id="banner">
         {{ if .Site.Data.homepage.banner.enable }} {{ with
         .Site.Data.homepage.banner }}
+        <div id="canvasDiv"></div>
         <h2>{{ .title }}</h2>
         <h2>{{ .title2 }}</h2>
       
