--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,10 +12,15 @@
       <section id="banner">
         {{ if .Site.Data.homepage.banner.enable }} {{ with
         .Site.Data.homepage.banner }}
-        <div id="canvasDiv"></div>
-        <h2>{{ .title }}</h2>
-        <h2>{{ .title2 }}</h2>
-      
+        
+        <div id="canvasDiv">
+      </div>
+
+      <div id="TE">
+        
+        <!-- <h2>{{ .title }}</h2>
+        <h2>{{ .title2 }}</h2> -->
+      </div>
           <h3>{{ with .content }}{{ . }}{{else}}{{ $.Site.Params.description
           }}{{end}}</h3>
         
