--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,11 +7,12 @@
   <nav id="nav">
     <ul>
       <li><a href="{{ .Site.BaseURL }}">Home</a></li>
-      <li><a href="{{ .URL }}">Contact</a></li>
+      <!-- <li><a href="{{ .URL }}">Contact</a></li> -->
       <li>
         <!-- <a href="#" class="icon solid fa-angle-down">Layouts</a> -->
-        <!-- <ul>
-          {{- range .Site.Menus.main -}} {{- if .HasChildren -}}
+        <ul>
+          {{- range .Site.Menus.main -}} 
+            {{- if .HasChildren -}}
           <li>
             <a href="{{ .URL }}">{{ .Name }}</a>
             <ul>
@@ -24,7 +25,7 @@
           <li><a href="{{ .URL }}">{{ .Name }}</a></li>
           {{- end -}} {{- end -}}
         </ul>
-      </li> -->
+      </li>
       {{ $button := .Site.Data.globalheader.button }} {{ if $button.enable }}
       <li>
         <a href="{{ $button.link }}" class="button">{{ $button.title }}</a>
