--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -5,4 +5,5 @@
 <script src="{{ (resources.Get "js/browser.min.js").Permalink }}"></script>
 <script src="{{ (resources.Get "js/breakpoints.min.js").Permalink }}"></script>
 <script src="{{ (resources.Get "js/util.js").Permalink }}"></script>
+<script src="{{ (resources.Get "js/main.js").Permalink }}"></script>
 <script src="{{ (resources.Get "js/p5.min.js").Permalink }}"></script>
