--- a/layouts/index.html
+++ b/layouts/index.html
@@ -105,9 +105,8 @@
           {{ range .items }}
           <section>
             <span class="icon solid major {{ .icon }} {{ .accent }}"></span>    
-            
             <h3>{{ .title }}</h3>
-            <p>{{ .content }}</p>
+            <p>{{ .content | safeHTML}}</p>
           </section>
           {{ end }}
         </div>
