--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,6 +15,6 @@
   {{ if .Site.DisqusShortname }}
   <!-- <div class="box">
     <!-- {{ template "_internal/disqus.html" . }} -->
-  </div> -->
+  </div> 
   {{ end }}
 {{ end }}
