--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1709,7 +1709,7 @@ body.landing {
     color: _palette(fg-light);
     font-size: 0.9em;
     line-height: 1em;
-    margin: 2em 0 0 0;
+    margin: 2em 0 1em 0;
     padding: 0;
     text-align: center;
 
