--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -29,18 +29,18 @@
 // Palette.
 	$palette: (
 		bg:					#f5f5f5,
-		fg:					#777,
-		fg-bold:			#646464,
-		fg-light:			#999,
+		fg:					#283583,
+		fg-bold:			#283583,
+		fg-light:			#283583,
 		border:				#e5e5e5,
 		border-bg:			#f8f8f8,
 		border2:			#dddddd,
 		border2-bg:			#f0f0f0,
 
 		header: (
-			bg:				#444,
-			fg:				#bbb,
-			fg-bold:		#fff,
+			bg:				rgba(170, 202, 250, 0.639),
+			fg:				#283583,
+			fg-bold:		#283583,
 			fg-light:		#999
 		),
 
