--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -132,7 +132,7 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  // font-size: 100%;
   font: inherit;
   vertical-align: baseline;
 }
@@ -244,7 +244,7 @@ textarea {
   font-size: 16pt;
   font-weight: _font(weight);
   line-height: 1.65em;
-  letter-spacing: -0.015em;
+  letter-spacing: 0em;
 }
 
 a {
@@ -303,7 +303,7 @@ h2 {
   color: _palette(fg-bold);
   font-weight: _font(weight);
   line-height: 1em;
-  margin: 0 0 -0.5em 0;
+  margin: 0 0 0.5em 0;
 }
 
 h3 {
@@ -489,10 +489,12 @@ header {
     position: relative;
     margin: 0 0 (_size(element-margin) * 0.75) 0;
     font-style: italic;
+
+
   }
 
   h2 + p {
-    font-size: 1.25em;
+    font-size: 2.25em;
     margin-top: -1em;
     line-height: 1.5em;
   }
@@ -526,6 +528,7 @@ header {
       margin: 1.5em 0 0 0;
       padding: 1.5em 0 0 0;
       font-style: normal;
+
     }
   }
 }
