--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,7 +5,11 @@
 @import "libs/breakpoints";
 @import "libs/html-grid";
 @import url("css/fontawesome-all.min.css");
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
+//@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&display=swap");
+
+
+
 
 /*
 	Alpha by HTML5 UP
