--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -136,7 +136,7 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  // font-size: 100%;
+  font-size: 5em;
   font: inherit;
   vertical-align: baseline;
 }
@@ -532,7 +532,6 @@ header {
       margin: 1.5em 0 0 0;
       padding: 1.5em 0 0 0;
       font-style: normal;
-
     }
   }
 }
@@ -1851,7 +1850,7 @@ body.landing {
   input,
   select,
   textarea {
-    font-size: 11pt;
+    font-size: 13pt;
   }
 
   /* Header */
@@ -1900,7 +1899,7 @@ body.landing {
   input,
   select,
   textarea {
-    font-size: 11pt;
+    font-size: 13pt;
   }
 }
 
