--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -38,9 +38,9 @@
 		border2-bg:			#f0f0f0,
 
 		header: (
-			bg:				rgba(133, 181, 254, 0.612),
+			bg:				#ffffff,
 			fg:				#283583,
-			fg-bold:		#ffffff,
+			fg-bold:		#283583,
 			fg-light:		#999
 		),
 
