--- a/layouts/index.html
+++ b/layouts/index.html
@@ -57,7 +57,7 @@
             <section class="box special">
               {{ with partial "bannerURL" . }}
               
-              <a href="{{ . }}" class="image featured"><img src="{{ . }}" alt="" /></a>
+              <a class="image featured"><img src="{{ . }}" alt="" /></a>
 
               {{ end }}
               
