--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,7 +7,7 @@
   <nav id="nav">
     <ul>
       
-      <li><a href="https://www.tobias-ertel.de" target="_blank">>>> See my Photography work</a></li>
+      <li><a href="https://photobi.tumblr.com/" target="_blank">>>> See my Photography work</a></li>
       <!-- <li><a href="{{ .URL }}">Contact</a></li> -->
       <li>
         <!-- <a href="#" class="icon solid fa-angle-down">Layouts</a> -->
